[gd_scene load_steps=8 format=2]

[ext_resource path="res://Leg.tscn" type="PackedScene" id=1]
[ext_resource path="res://Spider.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.862745, 0.227451, 0.227451, 1 )

[sub_resource type="CapsuleShape" id=5]
radius = 0.5

[node name="Spider" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Port_Hind" type="Spatial" parent="."]
transform = Transform( -0.763886, 0, 0.645351, 0, 1, 0, -0.645351, 0, -0.763886, 0.610277, 0.451526, -0.300443 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" parent="Port_Hind" instance=ExtResource( 1 )]

[node name="RayCast" type="RayCast" parent="Port_Hind"]
transform = Transform( 1, 0, 1.49012e-07, 0, 1, 0, -2.98023e-08, 0, 0.999999, 0, 0, 2.625 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="Dot" type="MeshInstance" parent="Port_Hind"]
transform = Transform( 0.2, 0, -1.33459e-08, 0, 0.2, 0, 1.33459e-08, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Starboard_Hind" type="Spatial" parent="."]
transform = Transform( -0.788172, 0, -0.615455, 0, 1, 0, 0.615455, 0, -0.788172, -0.61, 0.451095, -0.300335 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" parent="Starboard_Hind" instance=ExtResource( 1 )]

[node name="RayCast" type="RayCast" parent="Starboard_Hind"]
transform = Transform( 1, 0, 1.49012e-07, 0, 1, 0, -2.98023e-08, 0, 0.999999, 0, 0, 2.625 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="Dot" type="MeshInstance" parent="Starboard_Hind"]
transform = Transform( 0.2, 0, -1.33459e-08, 0, 0.2, 0, 1.33459e-08, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Port_MidHind" type="Spatial" parent="."]
transform = Transform( -0.404886, 0, 0.914367, 0, 1, 0, -0.914367, 0, -0.404886, 0.610277, 0.451526, 0.117925 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" parent="Port_MidHind" instance=ExtResource( 1 )]

[node name="RayCast" type="RayCast" parent="Port_MidHind"]
transform = Transform( 1, 0, 1.49012e-07, 0, 1, 0, -2.98023e-08, 0, 0.999999, 0, 0, 1.746 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="Dot" type="MeshInstance" parent="Port_MidHind"]
transform = Transform( 0.2, 0, -1.33459e-08, 0, 0.2, 0, 1.33459e-08, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Starboard_MidHind" type="Spatial" parent="."]
transform = Transform( -0.404886, 0, -0.914367, 0, 1, 0, 0.914367, 0, -0.404886, -0.61, 0.451095, 0.117818 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" parent="Starboard_MidHind" instance=ExtResource( 1 )]

[node name="RayCast" type="RayCast" parent="Starboard_MidHind"]
transform = Transform( 1, 0, 1.49012e-07, 0, 1, 0, -2.98023e-08, 0, 0.999999, 0, 0, 1.746 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="Dot" type="MeshInstance" parent="Starboard_MidHind"]
transform = Transform( 0.2, 0, -1.33459e-08, 0, 0.2, 0, 1.33459e-08, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Port_MidFront" type="Spatial" parent="."]
transform = Transform( 0.404886, 0, 0.914367, 0, 1, 0, -0.914367, 0, 0.404886, 0.61, 0.451095, 0.499361 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" parent="Port_MidFront" instance=ExtResource( 1 )]

[node name="RayCast" type="RayCast" parent="Port_MidFront"]
transform = Transform( 1, 0, 1.49012e-07, 0, 1, 0, -2.98023e-08, 0, 0.999999, 0, 0, 1.746 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="Dot" type="MeshInstance" parent="Port_MidFront"]
transform = Transform( 0.2, 0, -1.33459e-08, 0, 0.2, 0, 1.33459e-08, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Starboard_MidFront" type="Spatial" parent="."]
transform = Transform( 0.404886, 0, -0.914367, 0, 1, 0, 0.914367, 0, 0.404886, -0.61, 0.451095, 0.499361 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" parent="Starboard_MidFront" instance=ExtResource( 1 )]

[node name="RayCast" type="RayCast" parent="Starboard_MidFront"]
transform = Transform( 1, 0, 1.49012e-07, 0, 1, 0, -2.98023e-08, 0, 0.999999, 0, 0, 1.746 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="Dot" type="MeshInstance" parent="Starboard_MidFront"]
transform = Transform( 0.2, 0, -1.33459e-08, 0, 0.2, 0, 1.33459e-08, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Port_Front" type="Spatial" parent="."]
transform = Transform( 0.944892, 0, 0.327383, 0, 1, 0, -0.327383, 0, 0.944892, 0.61, 0.451095, 0.93 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" parent="Port_Front" instance=ExtResource( 1 )]

[node name="RayCast" type="RayCast" parent="Port_Front"]
transform = Transform( 1, 0, 1.78814e-07, 0, 1, 0, -5.96046e-08, 0, 0.999999, 8.9407e-08, 0, 2.136 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="Dot" type="MeshInstance" parent="Port_Front"]
transform = Transform( 0.2, 0, -1.33459e-08, 0, 0.2, 0, 1.33459e-08, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Starboard_Front" type="Spatial" parent="."]
transform = Transform( 0.957405, 0, -0.288748, 0, 1, 0, 0.288748, 0, 0.957405, -0.61, 0.451095, 0.93 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" parent="Starboard_Front" instance=ExtResource( 1 )]

[node name="RayCast" type="RayCast" parent="Starboard_Front"]
transform = Transform( 1, 0, 1.49012e-07, 0, 1, 0, -2.98023e-08, 0, 0.999999, 0, 0, 2.136 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="Dot" type="MeshInstance" parent="Starboard_Front"]
transform = Transform( 0.2, 0, -1.33459e-08, 0, 0.2, 0, 1.33459e-08, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Thorax" type="MeshInstance" parent="."]
transform = Transform( 0.701142, 0, 0, 0, 0.300979, 0, 0, 0, 0.669019, 0, 0.470391, 0.289956 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Abdomen" type="MeshInstance" parent="."]
transform = Transform( 0.767995, 0, 0, 0, 0.300979, 0, 0, 0, 0.936007, 0, 0.470391, -1.4205 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 5 )
